HTML: meetings, friends, new scrollbar,  small fixes
readme

--- a/eav/src/main/webapp/resources/css/tlmain.css
+++ b/eav/src/main/webapp/resources/css/tlmain.css
@@ -1,5 +1,6 @@
 body, html {
     font-family: Roboto;
+	/*background-color: #f5f8fa;*/
 }
 /*Bootstrap*/
 
@@ -57,7 +58,14 @@ body, html {
 .card-nomargin{
   margin-bottom: 0px;
 }
-
+.nav{
+    max-height: 300px;
+    overflow:hidden !important;
+}
+.chat{
+    max-height: 30rem;
+    overflow:hidden !important;
+}
 .list-group-my{
   margin-bottom: 0px;
 }
@@ -65,7 +73,7 @@ body, html {
   margin-bottom: 0px;
 }
 .noresize {
-  resize: none;
+  resize: none; 
 }
 .textarea-addon{
   border-bottom-left-radius: 0px !important;
@@ -79,10 +87,10 @@ body, html {
 .timeline-menu-button{
   border-top-left-radius:4px;
   border-top-right-radius:4px;
-  border-bottom-right-radius: 0px;
-  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px; 
+  border-bottom-left-radius: 0px; 
 }
-/*пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ*/
+/*Вертикальный отступ*/
 .top-buffer-1 { margin-top:1px; }
 .top-buffer-2 { margin-top:7px; }
 .top-buffer-3 { margin-top:3px; }
@@ -95,7 +103,7 @@ body, html {
 .top-buffer-40 { margin-top:40px; }
 .top-buffer-50 { margin-top:50px; }
 .top-buffer-60 { margin-top:60px; }
-/*пїЅпїЅпїЅпїЅпїЅпїЅпїЅ modal пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ*/
+/*Элемент modal по центру экрана*/
 .modal {
   text-align: center;
   padding: 0!important;
@@ -116,7 +124,7 @@ body, html {
 }
 /*Timeline*/
 
-/*пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ*/
+/*Крестик для удаления*/
 .vis-delete{
   right: -4.5px;
   top: -7px;
@@ -138,86 +146,110 @@ body, html {
   border-bottom-right-radius: 4px; 
   border-bottom-left-radius: 4px;
 }
-/*пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ*/
+/*Любой элемент*/
 .vis-item {
   border-radius: 5px;
   color: white;
   background-color: lawngreen;
   border-color: darkred;
 }
-/*пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ*/
+/*Выделенный элемент*/
 .vis-item.vis-selected{
   color: black;
   background-color: white;
 }
-/*пїЅпїЅпїЅпїЅпїЅ 1 (пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ)*/
+/*Стиль 1 (красный элемент)*/
 .vis-item.Style1 {
   text-align: justify ;
   border-radius: 5px;
   color: white;
   background-color: #d9534f;
   border-color: darkred;
+  opacity: 0.93;
 }
-/*пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ*/
+/*Выделенный красный элемент*/
 .vis-item.vis-selected.Style1{
   color: white;
   background-color: #c9302c;
 }
-/*пїЅпїЅпїЅпїЅпїЅ 2 (пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ)*/
+/*Стиль 2 (жёлтый элемент)*/
 .vis-item.Style2 {
   text-align: justify ;
   border-radius: 5px;
   color: white;
   background-color: #f0ad4e;
   border-color: darkred;
+  opacity: 0.93;
 }
-/*пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ*/
+/*Выделенный жёлтый элемент*/
 .vis-item.vis-selected.Style2{
   color: white;
   background-color: #ec971f;
 }
-/*пїЅпїЅпїЅпїЅпїЅ 1 (пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ)*/
+/*Стиль 3 (синий элемент)*/
 .vis-item.Style3 {
   text-align: justify ;
   border-radius: 5px;
   color: white;
   background-color: #5bc0de;
   border-color: darkred;
+  opacity: 0.93;
 }
-/*пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ*/
+/*Выделенный синий элемент*/
 .vis-item.vis-selected.Style3{
   color: white;
   background-color: #31b0d5;
 }
-
-/*Enscroll*/
-
-.track3 {
-    width: 10px;
-    background: rgba(0, 0, 0, 0);
-    margin-right: 2px;
-    border-radius: 10px;
-    -webkit-transition: background 250ms linear;
-    transition: background 250ms linear;
+/*Card image and buttons*/
+.profile-userpic img {
+	float: none;
+	margin: 0 auto;
+	width: 50%;
+	height: 50%;
+	-webkit-border-radius: 50% !important;
+	-moz-border-radius: 50% !important;
+	border-radius: 50% !important;
+}
+.profile-userbuttons {
+  text-align: center;
+  margin-top: 10px;
 }
 
-.track3:hover,
-.track3.dragging {
-    background: #d9d9d9; /* Browsers without rgba support */
-    background: rgba(0, 0, 0, 0.15);
+.profile-userbuttons .btn {
+  text-transform: uppercase;
+  font-size: 11px;
+  font-weight: 600;
+  padding: 6px 15px;
+  margin-right: 5px;
+  margin-bottom: 5px;
 }
 
-.handle3 {
-    width: 7px;
-    right: 0;
-    background: #999;
-    background: rgba(0, 0, 0, 0.4);
-    border-radius: 7px;
-    -webkit-transition: width 250ms;
-    transition: width 250ms;
+.profile-userbuttons .btn:last-child {
+  margin-right: 0px;
 }
-
-.track3:hover .handle3,
-.track3.dragging .handle3 {
-    width: 10px;
+/*Hover effect*/
+.style_prevu_kit
+{
+    -webkit-transition: all 200ms ease-in;
+    -webkit-transform: scale(1); 
+    -ms-transition: all 200ms ease-in;
+    -ms-transform: scale(1); 
+    -moz-transition: all 200ms ease-in;
+    -moz-transform: scale(1);
+    transition: all 200ms ease-in;
+    transform: scale(1);   
+	cursor: default;
+}
+.style_prevu_kit:hover
+{
+    box-shadow: 0px 0px 10px #5bc0de;
+    z-index: 2;
+    -webkit-transition: all 200ms ease-in;
+    -webkit-transform: scale(1.05);
+    -ms-transition: all 200ms ease-in;
+    -ms-transform: scale(1.05);   
+    -moz-transition: all 200ms ease-in;
+    -moz-transform: scale(1.05);
+    transition: all 200ms ease-in;
+    transform: scale(1.05);
 }
